# segment-editor

./: CMakeLists.txt  README.md
cmake/: configuration.cmake
src/app/: CMakeLists.txt
src/app/segment-editor/: CMakeLists.txt  main.cpp
src/app/segment-editor/qml/: SegmentGridView.qml  SegmentListView.qml  SegmentTile.qml  main.qml  segment-editor.qrc
src/lib/: CMakeLists.txt
src/lib/segment-editor-core/: CMakeLists.txt
src/lib/segment-editor-core/segment-editor/: CMakeLists.txt  backend.cpp  backend.h  segment.cpp  segment.h  segment_model.cpp  segment_model.h  utils.cpp  utils.h
test/: CMakeLists.txt
test/testsegment-editor-core/: CMakeLists.txt  main.cpp  segment_model_tests.cpp
